-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0
-
None
-
I40ab4db48dc82ba0d1c0bb5275e96a3ee812b01a
The QBluetoothLocalDevice on QNX and Bluez backend always returned true (no matter what).
First failure (on Bluez)
- Remove every Bluez device from the system
- Run following code:
QBluetoothLocalDevice local; QVERIFY(!local.isValid())
The above test fails on Bluez
Second failure (on QNX and Bluez)
- Ensure a Bluetooth device is connected
- Run following code:
//assume that local device doesn't have the given address QBluetoothAddress a("FF:FF:FF:FF:FF:FF") QBluetoothLocalDevice local(a); QVERIFY(!local.isValid())
The above test fails on Bluez and QNX.
| For Gerrit Dashboard: QTBUG-32068 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 60050,5 | Fix broken QBluetoothLocalDevice::isValid() behavior | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |